--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "serverHost": "example.aternos.me",
   "serverPort": 12345,
-  "botUsername": "IceLaterBot",
+  "botUsername": "Lomita",
   "botChunk": 1
 }
